examples/negative/effects_phase2/partial_handle_no_default.kai
# Issue #557 (Stage B): per-op coverage check on a partial handle.
# `MyLog` declares two ops (`info`, `warn`) but the `handle ... with
# MyLog` lists only `info`. The body performs `MyLog.warn`. There is
# no `default { }` block, so neither step 2 (clause-merge) nor step 3
# (default-fires-at-handle) of the algorithm can discharge the op.
#
# Before Stage B this typechecked cleanly and the binary segfaulted
# at runtime — `_ev.warn` stayed NULL after the handle prologue, and
# dispatch trapped on a NULL function pointer. The typer now rejects
# the unhandled op at the call site with a precise diagnostic.

effect MyLog {
  info(msg: String) : Unit
  warn(msg: String) : Unit
}

fn main() : Int = {
  handle {
    MyLog.warn("oops")
    42
  } with MyLog {
    info(msg, resume) -> resume(())
  }
}
